--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,15 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body ng-app="hslMapApp">
-  <ul class="menu">
-    <li><a href="#/map">view1</a></li>
-  </ul>
 
   <div ng-view></div>
 
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+
+  <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+  <script src="lib/angular-leaflet-directive.js"></script>
+
   <script src="app.js"></script>
   <script src="map/map.js"></script>
 </body>
