--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+
+  <link rel="stylesheet" href="lib/leaflet.awesome-markers.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -19,6 +22,9 @@
 
   <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   <script src="lib/angular-leaflet-directive.js"></script>
+  <script src="lib/leaflet.awesome-markers.js"></script>
+
+  <script src="lib/lodash.min.js"></script>
 
   <script src="app.js"></script>
   <script src="map/map.js"></script>
