--- a/app/map/map.html
+++ b/app/map/map.html
@@ -1,8 +1,11 @@
 
 <div class="ontop container-fluid">
 	<div class="row">
-		<div class="col-md-4 col-md-offset-4 ">
-			<input class="form-control" type="text" placeholder="Etsi" ng-model="filtertext">
+		<div class="col-md-4 col-md-offset-4">
+			<div class=" form-group has-feedback">
+				<input class="form-control" type="text" ng-model="filtertext">
+				<i class="glyphicon glyphicon-search form-control-feedback"></i>
+			</div>
 		</div>
 	</div>
 </div>
