handling route information

--- a/app/map/map.html
+++ b/app/map/map.html
@@ -10,4 +10,4 @@
 	</div>
 </div>
 
-<leaflet height="600px" class="map" defaults="defaults" center="center" markers="markers"></leaflet>
+<leaflet height="600px" class="map" paths="paths" defaults="defaults" center="center" markers="markers"></leaflet>
